--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -15,14 +15,14 @@
 					</div>
 				</div>
 				<div class="col-md-4 about-grid">
-					<img src="assets/images/a2.jpg" alt="" class="img-responsive">
+					<img src="assets/images/c4.jpg" alt="" class="img-responsive">
 					<div class="grid-details">
 						<h3>Et harum quidem rerum facilis</h3>
 						<p>Excepteur sint occaecat cupidatat proident sunt culpa officia.</p>
 					</div>
 				</div>
 				<div class="col-md-4 about-grid">
-					<img src="assets/images/a3.jpg" alt="" class="img-responsive">
+					<img src="assets/images/c2.jpg" alt="" class="img-responsive">
 					<div class="grid-details">
 						<h3>Et harum quidem rerum facilis</h3>
 						<p>Excepteur sint occaecat cupidatat proident sunt culpa officia.</p>
