--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -32,7 +32,7 @@
 								<li><a class="scroll"  href="#contact">Contact</a></li>
                             <li><a class="scroll" routerLink="/register">sign up</a></li>
                             <li><a class="scroll" routerLink="/login" href="#contact">sign in</a></li>-->
-							<li><button  class="btn btn-warning" type="button" routerLink="/register">sign up</button></li>
+							<li><button  class="btn btn-warning" type="button" routerLink="/register"  [ngStyle]="{'background-color': #a73c46}">sign up</button></li>
                             <li><button class="btn btn-info" routerLink="/login" href="#contact">sign in</button></li>
 
 
