--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -10,16 +10,16 @@
                 </div>
                 <div class="team-bottom">
                     <div class="col-md-3 team-grid">
-                        <a href="#"> <img src="assets/images/t1.jpg" alt="" class="img-responsive"> </a>
+                        <a href="#"> <img src="assets/images/mlk.jpg" alt="" class="img-responsive"> </a>
                     </div>
                     <div class="col-md-3 team-grid">
-                        <a href="#"> <img src="assets/images/t2.jpg" alt="" class="img-responsive"> </a>
+                        <a href="#"> <img src="assets/images/sam.jpg" alt="" class="img-responsive"> </a>
                     </div>
                     <div class="col-md-3 team-grid">
-                        <a href="#"> <img src="assets/images/t3.jpg" alt="" class="img-responsive"> </a>
+                        <a href="#"> <img src="assets/images/mlk.jpg" alt="" class="img-responsive"> </a>
                     </div>
                     <div class="col-md-3 team-grid">
-                        <a href="#"> <img src="assets/images/t4.jpg" alt="" class="img-responsive"> </a>
+                        <a href="#"> <img src="assets/images/sam.jpg" alt="" class="img-responsive"> </a>
                     </div>
                 <div class="clearfix"> </div>
             </div>
@@ -77,7 +77,7 @@
 	<div class="container">
 		<div class="testmony-main">
 			<div class="col-md-4 testmo-left">
-				<img src="assets/images/tes.jpg" alt="" class="img-responsive">
+				<img src="assets/images/mlk.jpg" alt="" class="img-responsive">
 			</div>
 			<div class="col-md-8 testmo-right">
 				<span class="quota1"> </span>
